Validating 4.6.2 assembly, and assembly namespace fixes.

--- a/Coffee/CoffeeCore.csproj
+++ b/Coffee/CoffeeCore.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{6FC9AD05-0B86-4A47-830C-861919F9ACCC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Coffee</RootNamespace>
-    <AssemblyName>Coffee</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>CoffeeCore</RootNamespace>
+    <AssemblyName>CoffeeCore</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
