--- a/DispenserCore/VendorCore.csproj
+++ b/DispenserCore/VendorCore.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{D52834C3-7C80-428F-974F-4B6F7A83E7EF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DispenserCore</RootNamespace>
-    <AssemblyName>DispenserCore</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>VendorCore</RootNamespace>
+    <AssemblyName>VendorCore</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
