Updated folder structure for consistency with assembly name

--- a/CoffeeUnitTests/CoffeeDispenserUnitTests.csproj
+++ b/CoffeeUnitTests/CoffeeDispenserUnitTests.csproj
@@ -57,7 +57,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Coffee\CoffeeCore.csproj">
+    <ProjectReference Include="..\CoffeeCore\CoffeeCore.csproj">
       <Project>{6fc9ad05-0b86-4a47-830c-861919f9accc}</Project>
       <Name>CoffeeCore</Name>
     </ProjectReference>
