--- a/CoffeeDOS/CoffeeDOS.csproj
+++ b/CoffeeDOS/CoffeeDOS.csproj
@@ -50,7 +50,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Coffee\CoffeeCore.csproj">
+    <ProjectReference Include="..\CoffeeCore\CoffeeCore.csproj">
       <Project>{6fc9ad05-0b86-4a47-830c-861919f9accc}</Project>
       <Name>CoffeeCore</Name>
     </ProjectReference>
