Changed Addon and Size to an Interface due to lack of abstract class qualifications
Updated unit tests to be more concise and easy to read

--- a/CoffeeCore/CoffeeCore.csproj
+++ b/CoffeeCore/CoffeeCore.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Addon.cs" />
+    <Compile Include="IAddon.cs" />
     <Compile Include="Coffee.cs" />
     <Compile Include="Creamer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
